[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/main/ui/FpsLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/ui/theme/h2.theme" type="Theme" id=2]
[ext_resource path="res://src/demo/packed-sprite-stress-test.gd" type="Script" id=3]
[ext_resource path="res://src/main/puzzle/FoodItem.tscn" type="PackedScene" id=4]

[node name="Node" type="Node"]
script = ExtResource( 3 )
SpriteScene = ExtResource( 4 )

[node name="SpriteContainer" type="Node" parent="."]

[node name="Ui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="VBoxContainer" parent="Ui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -144.5
margin_right = 75.0
margin_bottom = 144.5
rect_min_size = Vector2( 150, 0 )
custom_constants/separation = 10

[node name="Times2" type="Button" parent="Ui/Control"]
margin_right = 150.0
margin_bottom = 51.0
theme = ExtResource( 2 )
text = "ร 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlusTen" type="Button" parent="Ui/Control"]
margin_top = 61.0
margin_right = 150.0
margin_bottom = 112.0
theme = ExtResource( 2 )
text = "+ 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="Ui/Control"]
margin_top = 122.0
margin_right = 150.0
margin_bottom = 167.0
theme = ExtResource( 2 )
text = "2"
align = 1

[node name="MinusTen" type="Button" parent="Ui/Control"]
margin_top = 177.0
margin_right = 150.0
margin_bottom = 228.0
theme = ExtResource( 2 )
text = "- 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Divide2" type="Button" parent="Ui/Control"]
margin_top = 238.0
margin_right = 150.0
margin_bottom = 289.0
theme = ExtResource( 2 )
text = "รท 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FpsLabel" parent="Ui" instance=ExtResource( 1 )]
margin_top = -30.0
margin_right = -10.0002
margin_bottom = 0.0

[connection signal="pressed" from="Ui/Control/Divide2" to="." method="_on_Divide2_pressed"]
[connection signal="pressed" from="Ui/Control/MinusTen" to="." method="_on_MinusTen_pressed"]
[connection signal="pressed" from="Ui/Control/PlusTen" to="." method="_on_PlusTen_pressed"]
[connection signal="pressed" from="Ui/Control/Times2" to="." method="_on_Times2_pressed"]
